--- a/tory-lanez-site/songs.html
+++ b/tory-lanez-site/songs.html
@@ -18,7 +18,7 @@
   </header>
 
   <nav>
-    <a href="Torylanez.html">Home</a>
+    <a href="torylanez.html">Home</a>
     <a href="songs.html">Songs</a>
     <a href="albums.html">Albums</a>
   </nav>
